{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 369,
  "lineage": "18d6b97b-c140-31ef-0e20-b1f56ec5fd24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492290017:loadbalancer/app/cb-load-balancer/57d2ee74ad459390",
            "arn_suffix": "app/cb-load-balancer/57d2ee74ad459390",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cb-load-balancer-854265689.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492290017:loadbalancer/app/cb-load-balancer/57d2ee74ad459390",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cb-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0284164e243dc4986"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0574110e0d51784e4"
              },
              {
                "subnet_id": "subnet-0b6806c623de2e249"
              },
              {
                "subnet_id": "subnet-0ca9d1521cd5a7140"
              }
            ],
            "subnets": [
              "subnet-0574110e0d51784e4",
              "subnet-0b6806c623de2e249",
              "subnet-0ca9d1521cd5a7140"
            ],
            "vpc_id": "vpc-0a92c7408df466505",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492290017:listener/app/cb-load-balancer/57d2ee74ad459390/55f6c98bab210774",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492290017:targetgroup/cb-target-group/13828302b6b593dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492290017:listener/app/cb-load-balancer/57d2ee74ad459390/55f6c98bab210774",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492290017:loadbalancer/app/cb-load-balancer/57d2ee74ad459390",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492290017:targetgroup/cb-target-group/13828302b6b593dc",
            "arn_suffix": "targetgroup/cb-target-group/13828302b6b593dc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492290017:targetgroup/cb-target-group/13828302b6b593dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:381492290017:loadbalancer/app/cb-load-balancer/57d2ee74ad459390"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0c98559cfb1ae50",
            "arn": "arn:aws:ec2:us-east-1:381492290017:elastic-ip/eipalloc-0a0c98559cfb1ae50",
            "association_id": "eipassoc-083d03021eb8d4b11",
            "domain": "vpc",
            "id": "eipalloc-0a0c98559cfb1ae50",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bfa71dea0b336461",
            "private_dns": "ip-10-0-0-34.ec2.internal",
            "private_ip": "10.0.0.34",
            "public_dns": "ec2-44-214-126-124.compute-1.amazonaws.com",
            "public_ip": "44.214.126.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d8c3b68cc7f5501",
            "arn": "arn:aws:ec2:us-east-1:381492290017:elastic-ip/eipalloc-00d8c3b68cc7f5501",
            "association_id": "eipassoc-0a0063a4b097d8670",
            "domain": "vpc",
            "id": "eipalloc-00d8c3b68cc7f5501",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0562df68cedb582cd",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_ip": "10.0.1.121",
            "public_dns": "ec2-34-225-128-253.compute-1.amazonaws.com",
            "public_ip": "34.225.128.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_vpc.prod_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad558de87fd64db8",
            "arn": "arn:aws:ec2:us-east-1:381492290017:elastic-ip/eipalloc-0ad558de87fd64db8",
            "association_id": "eipassoc-05ed1b4e1a0fbec64",
            "domain": "vpc",
            "id": "eipalloc-0ad558de87fd64db8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01f150e84eacb040e",
            "private_dns": "ip-10-0-2-175.ec2.internal",
            "private_ip": "10.0.2.175",
            "public_dns": "ec2-52-22-76-88.compute-1.amazonaws.com",
            "public_ip": "52.22.76.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:internet-gateway/igw-0f0a535e309a0806a",
            "id": "igw-0f0a535e309a0806a",
            "owner_id": "381492290017",
            "tags": {
              "Name": "prod_gw"
            },
            "tags_all": {
              "Name": "prod_gw"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0c98559cfb1ae50",
            "association_id": "eipassoc-083d03021eb8d4b11",
            "connectivity_type": "public",
            "id": "nat-0a0af2b90115ef994",
            "network_interface_id": "eni-0bfa71dea0b336461",
            "private_ip": "10.0.0.34",
            "public_ip": "44.214.126.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6806c623de2e249"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d8c3b68cc7f5501",
            "association_id": "eipassoc-0a0063a4b097d8670",
            "connectivity_type": "public",
            "id": "nat-077de23079b5b8916",
            "network_interface_id": "eni-0562df68cedb582cd",
            "private_ip": "10.0.1.121",
            "public_ip": "34.225.128.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0574110e0d51784e4"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad558de87fd64db8",
            "association_id": "eipassoc-05ed1b4e1a0fbec64",
            "connectivity_type": "public",
            "id": "nat-066ed0fd8ad255ccf",
            "network_interface_id": "eni-01f150e84eacb040e",
            "private_ip": "10.0.2.175",
            "public_ip": "52.22.76.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca9d1521cd5a7140"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:route-table/rtb-074c1f5e5160f4972",
            "id": "rtb-074c1f5e5160f4972",
            "owner_id": "381492290017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0af2b90115ef994",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:route-table/rtb-0abd31f451cebc598",
            "id": "rtb-0abd31f451cebc598",
            "owner_id": "381492290017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-077de23079b5b8916",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:route-table/rtb-026d943d5b0af4e1f",
            "id": "rtb-026d943d5b0af4e1f",
            "owner_id": "381492290017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066ed0fd8ad255ccf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:route-table/rtb-05ac9c0f6fe705a9c",
            "id": "rtb-05ac9c0f6fe705a9c",
            "owner_id": "381492290017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0a535e309a0806a",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0a535e309a0806a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_rt"
            },
            "tags_all": {
              "Name": "prod_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6f29100dd2386aa",
            "route_table_id": "rtb-05ac9c0f6fe705a9c",
            "subnet_id": "subnet-0b6806c623de2e249"
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_route_table.prod_rt",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e9810d50661fb33",
            "route_table_id": "rtb-05ac9c0f6fe705a9c",
            "subnet_id": "subnet-0574110e0d51784e4"
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_route_table.prod_rt",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f99fa21b862b5ef",
            "route_table_id": "rtb-05ac9c0f6fe705a9c",
            "subnet_id": "subnet-0ca9d1521cd5a7140"
          },
          "dependencies": [
            "aws_internet_gateway.prod_gw",
            "aws_route_table.prod_rt",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086c231d36763fce5",
            "route_table_id": "rtb-074c1f5e5160f4972",
            "subnet_id": "subnet-0afac634c59dca8b9"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04628768c1d80b0ff",
            "route_table_id": "rtb-0abd31f451cebc598",
            "subnet_id": "subnet-0f955c1f79c673b57"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a05cbc981ff40ccf",
            "route_table_id": "rtb-026d943d5b0af4e1f",
            "subnet_id": "subnet-06a9a970cfef1aeb5"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.prod_gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ec2_on_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group/sg-0194ce88e99ed14a8",
            "description": "Allow EC2 access on RDS",
            "egress": [],
            "id": "sg-0194ce88e99ed14a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f66537ee4bcbbce"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_ec2_on_rds",
            "name_prefix": "",
            "owner_id": "381492290017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ec2_on_rds"
            },
            "tags_all": {
              "Name": "allow_ec2_on_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group/sg-09f66537ee4bcbbce",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f66537ee4bcbbce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0284164e243dc4986"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "381492290017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-tasks-security-group"
            },
            "tags_all": {
              "Name": "ecs-tasks-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group/sg-052cffedb6bcbbbce",
            "description": "Allow EC2 access on Redis",
            "egress": [],
            "id": "sg-052cffedb6bcbbbce",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f66537ee4bcbbce"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "elasticache",
            "name_prefix": "",
            "owner_id": "381492290017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticache"
            },
            "tags_all": {
              "Name": "elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group/sg-0284164e243dc4986",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0284164e243dc4986",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "381492290017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-security-group"
            },
            "tags_all": {
              "Name": "load-balancer-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-0afac634c59dca8b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afac634c59dca8b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-0f955c1f79c673b57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f955c1f79c673b57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-06a9a970cfef1aeb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a9a970cfef1aeb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-0b6806c623de2e249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6806c623de2e249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-0574110e0d51784e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574110e0d51784e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:subnet/subnet-0ca9d1521cd5a7140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca9d1521cd5a7140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492290017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0a92c7408df466505"
          },
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:vpc/vpc-0a92c7408df466505",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbcc95ae400312f0",
            "default_route_table_id": "rtb-01ddc3525a807cfa0",
            "default_security_group_id": "sg-0e1a01c77ac00868c",
            "dhcp_options_id": "dopt-06cfbf43b0c80a6bf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a92c7408df466505",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ddc3525a807cfa0",
            "owner_id": "381492290017",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_tasks_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0e84666078b3f0fb5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e84666078b3f0fb5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09f66537ee4bcbbce",
            "security_group_rule_id": "sgr-0e84666078b3f0fb5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0df85839b474a67d1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0df85839b474a67d1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0284164e243dc4986",
            "security_group_rule_id": "sgr-0df85839b474a67d1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0804084fe0c4346a8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0804084fe0c4346a8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09f66537ee4bcbbce",
            "security_group_id": "sg-0194ce88e99ed14a8",
            "security_group_rule_id": "sgr-0804084fe0c4346a8",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ec2_on_rds",
            "aws_security_group.ecs_tasks",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ec2_on_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0d45f2bf70b14ae00",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6379,
            "id": "sgr-0d45f2bf70b14ae00",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09f66537ee4bcbbce",
            "security_group_id": "sg-052cffedb6bcbbbce",
            "security_group_rule_id": "sgr-0d45f2bf70b14ae00",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.elasticache",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_tasks_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0eba2a91200e0f3cd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0eba2a91200e0f3cd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0284164e243dc4986",
            "security_group_id": "sg-09f66537ee4bcbbce",
            "security_group_rule_id": "sgr-0eba2a91200e0f3cd",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.lb",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492290017:security-group-rule/sgr-0dc063824a61c539b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0dc063824a61c539b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0284164e243dc4986",
            "security_group_rule_id": "sgr-0dc063824a61c539b",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    }
  ]
}